fix spacing

--- a/style.css
+++ b/style.css
@@ -814,9 +814,9 @@ h6{
 	text-align:left;
 }
 .intro__title{
-	padding:0 0 15px 0;
+	padding:0 0 50px 0;
 	color:#fff;
-	font-size:55px;
+	font-size:42px;
 	line-height:74px;
 	letter-spacing:-1px;
 }
@@ -824,9 +824,9 @@ h6{
 	font-weight:700;
 }
 .intro__subtitle{
-	padding:0 0 40px 0;
-	font-size:18px;
-	line-height:32px;
+	padding:0 0 75px 0;
+	font-size:15px;
+	line-height:20px;
 	color:#fff;
 	letter-spacing:0.4px;
 }
@@ -2605,7 +2605,7 @@ ul.grid__list--fmenu li {
 	line-height:55px;
 }
 .intro__subtitle{
-	font-size:22px;
+	font-size:10px;
 	line-height:24px;
 	padding:0 0 20px 0;
 }
